Добавил эмодзи и параграф

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
    <!-- Название страницы, которое отображается в верху вкладки браузера -->
-   <title>Maxutka page</title>
+   <title>Maxutka page😂</title>
    <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
    <meta name="viewport" content="width=device-width" initial-scale=1.0>
    <!-- изображение Марио, отображается перед названием страницы вверху вкладки браузера -->
@@ -55,9 +55,11 @@
                <div class="text">
                   <!-- Имя -->
                   <div class="name">
-                     <div>Max</div>
+                     <div>Max😂</div>
                      <div>Kollagen</div>
                   </div>
+                  <p>QA Engineer</p>
+
                   <div>
                      <div class="list"><span>age</span><span>:</span><span>26</span></div>
                      <div class="list"><span>work</span><span>:</span><span>qa-engineer</span></div>
@@ -70,7 +72,7 @@
             <!-- Ссылки -->
             <section class="links">
                <div class="link"><a href="https://t.me/lepetitprince_max">Telegram</a></div>
-               <div class="link"><a href="https://vk.com/maxxxkul">Vkontakte</a></div>
+               <div class="link"><a href="https://vk.com/maxxxkul">Vkontakte😂😂</a></div>
                <div class="link"><a href="mailto:max.kulaginc@gmail.com">Email</a></div>
                <div class="link"><a href="https://www.linkedin.com/in/maxim-kulaginc">Linkedin</a></div>
 
